refactor WPS store by add check connect working well